--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "primeflex": "^3.3.1",
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
+        "quill": "^2.0.2",
         "vue": "^3.2.41",
         "vue-axios": "^3.5.2",
         "vue-router": "^4.1.5"
