--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "quill": "^2.0.2",
         "vue": "^3.2.41",
         "vue-axios": "^3.5.2",
+        "vue-multiselect": "^3.0.0-beta.3",
         "vue-router": "^4.1.5"
     },
     "devDependencies": {
