--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
         "@rushstack/eslint-patch": "^1.1.4",
         "@vitejs/plugin-vue": "^4.1.0",
         "@vue/eslint-config-prettier": "^7.0.0",
+        "autoprefixer": "^10.4.19",
         "eslint": "^8.22.0",
         "eslint-plugin-vue": "^9.3.0",
+        "postcss": "^8.4.39",
         "prettier": "^2.7.1",
         "sass": "^1.55.0",
+        "tailwindcss": "^3.4.4",
         "vite": "^4.2.1"
     }
 }
