--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "primeicons": "^6.0.1",
         "primevue": "3.49.1",
         "quill": "^2.0.2",
+        "tailwindcss-primeui": "^0.3.4",
         "vue": "^3.2.41",
         "vue-axios": "^3.5.2",
         "vue-multiselect": "^3.0.0-beta.3",
-        "vue-router": "^4.1.5"
+        "vue-router": "^4.1.5",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.1.4",
